--- a/chori.html
+++ b/chori.html
@@ -102,7 +102,7 @@
     <div class="container">
         <!-- Header with profile picture and presentation text -->
         <div class="header">
-            <img src="https://via.placeholder.com/100" alt="Foto de perfil" class="profile-pic">
+            <img src="IMG-20250216-WA0143.jpg" alt="Foto de perfil" class="profile-pic">
             <div class="presentation">
                 <p>Hola brodi Soy el chori, un profesional dedicado a la recoleccion de paja y apasionado por sacachispa. Estoy aquí para ofrecerte mis servicios y asegurarme de que tengas una excelente experiencia trabajando conmigo.</p>
             </div>
